--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -20,132 +20,22 @@
 
     <!-- Image header -->
 
-    <div class="w3-container w3-text-grey" id="jeans">
-        <p>8 items</p>
+    <div class="w3-container w3-text-grey" id="">
+        <p>{{ products.count }} картин</p>
     </div>
 
     <!-- Product grid -->
-    {% for product in products %}
+    
     <div class="w3-row w3-grayscale">
+        {% for product in products %}
         <div class="w3-col l3 s6">
             <div class="w3-container">
                 <img src="{{ product.image.url }}" style="width: 100%"/>
-                <a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br />
-                <b>{{ product.price }}</b>
+                <p class="w3-center"><a href="{{ product.get_absolute_url }}">{{ product.name }}</a><br />
+                <b>{{ product.price }} рублей</b></p>
             </div>
         </div>
-    </div>
-    {% endfor %}
-
-    <!-- Subscribe section -->
-    <div class="w3-container w3-black w3-padding-32">
-        <h1>Subscribe</h1>
-        <p>To get special offers and VIP treatment:</p>
-        <p>
-            <input
-                class="w3-input w3-border"
-                type="text"
-                placeholder="Enter e-mail"
-                style="width: 100%"
-            />
-        </p>
-        <button type="button" class="w3-button w3-red w3-margin-bottom">
-            Subscribe
-        </button>
-    </div>
-
-    <!-- Footer -->
-    <footer class="w3-padding-64 w3-light-grey w3-small w3-center" id="footer">
-        <div class="w3-row-padding">
-            <div class="w3-col s4">
-                <h4>Contact</h4>
-                <p>Questions? Go ahead.</p>
-                <form action="/action_page.php" target="_blank">
-                    <p>
-                        <input
-                            class="w3-input w3-border"
-                            type="text"
-                            placeholder="Name"
-                            name="Name"
-                            required
-                        />
-                    </p>
-                    <p>
-                        <input
-                            class="w3-input w3-border"
-                            type="text"
-                            placeholder="Email"
-                            name="Email"
-                            required
-                        />
-                    </p>
-                    <p>
-                        <input
-                            class="w3-input w3-border"
-                            type="text"
-                            placeholder="Subject"
-                            name="Subject"
-                            required
-                        />
-                    </p>
-                    <p>
-                        <input
-                            class="w3-input w3-border"
-                            type="text"
-                            placeholder="Message"
-                            name="Message"
-                            required
-                        />
-                    </p>
-                    <button type="submit" class="w3-button w3-block w3-black">
-                        Send
-                    </button>
-                </form>
-            </div>
-
-            <div class="w3-col s4">
-                <h4>About</h4>
-                <p><a href="#">About us</a></p>
-                <p><a href="#">We're hiring</a></p>
-                <p><a href="#">Support</a></p>
-                <p><a href="#">Find store</a></p>
-                <p><a href="#">Shipment</a></p>
-                <p><a href="#">Payment</a></p>
-                <p><a href="#">Gift card</a></p>
-                <p><a href="#">Return</a></p>
-                <p><a href="#">Help</a></p>
-            </div>
-
-            <div class="w3-col s4 w3-justify">
-                <h4>Store</h4>
-                <p><i class="fa fa-fw fa-map-marker"></i> Company Name</p>
-                <p><i class="fa fa-fw fa-phone"></i> 0044123123</p>
-                <p><i class="fa fa-fw fa-envelope"></i> ex@mail.com</p>
-                <h4>We accept</h4>
-                <p><i class="fa fa-fw fa-cc-amex"></i> Amex</p>
-                <p><i class="fa fa-fw fa-credit-card"></i> Credit Card</p>
-                <br />
-                <i
-                    class="fa fa-facebook-official w3-hover-opacity w3-large"
-                ></i>
-                <i class="fa fa-instagram w3-hover-opacity w3-large"></i>
-                <i class="fa fa-snapchat w3-hover-opacity w3-large"></i>
-                <i class="fa fa-pinterest-p w3-hover-opacity w3-large"></i>
-                <i class="fa fa-twitter w3-hover-opacity w3-large"></i>
-                <i class="fa fa-linkedin w3-hover-opacity w3-large"></i>
-            </div>
-        </div>
-    </footer>
-
-    <div class="w3-black w3-center w3-padding-24">
-        Powered by
-        <a
-            href="https://www.w3schools.com/w3css/default.asp"
-            title="W3.CSS"
-            target="_blank"
-            class="w3-hover-opacity"
-            >w3.css</a
-        >
+        {% endfor %}
     </div>
 
     <!-- End page content -->
