--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -14,7 +14,7 @@
         <p class="w3-left">Новинки</p>
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
-            <i class="fa fa-search"></i>
+            <i class="fa fa-sign-in"></i>
         </p>
     </header>
 
