--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -4,6 +4,8 @@
 {% load static %}
 
 <!-- !PAGE CONTENT! -->
+
+<!-- hello -->
  
 <div class="w3-main" style="margin-left: 250px">
     <!-- Push down content on small screens -->
