--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -13,7 +13,7 @@
 
     <!-- Top header -->
     <header class="w3-container w3-xlarge">
-        <p class="w3-left">{{ category.name }}</p>
+        <p class="w3-left">Новинки</p>
         <p class="w3-right">
             <i class="fa fa-shopping-cart w3-margin-right"></i>
             <i class="fa fa-sign-in"></i>
