--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -25,16 +25,16 @@
             </div>
 
             <a href="#footer" class="w3-bar-item w3-button w3-padding"
-                >Contact</a
+                >Контакты</a
             >
             <a
                 href="javascript:void(0)"
                 class="w3-bar-item w3-button w3-padding"
                 onclick="document.getElementById('newsletter').style.display='block'"
-                >Newsletter</a
+                >Рассылка</a
             >
             <a href="#footer" class="w3-bar-item w3-button w3-padding"
-                >Subscribe</a
+                >Подписаться</a
             >
         </nav>
 
