--- a/templates/main/base.html
+++ b/templates/main/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>W3.CSS Template</title>
+        <title>{% block title %}{% endblock %}</title>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link
@@ -39,37 +39,6 @@
     <body class="w3-content" style="max-width: 1200px">
 
         {% block content %}{% endblock %}        
-
-        <!-- Newsletter Modal -->
-        <div id="newsletter" class="w3-modal">
-            <div class="w3-modal-content w3-animate-zoom" style="padding: 32px">
-                <div class="w3-container w3-white w3-center">
-                    <i
-                        onclick="document.getElementById('newsletter').style.display='none'"
-                        class="fa fa-remove w3-right w3-button w3-transparent w3-xxlarge"
-                    ></i>
-                    <h2 class="w3-wide">NEWSLETTER</h2>
-                    <p>
-                        Join our mailing list to receive updates on new arrivals
-                        and special offers.
-                    </p>
-                    <p>
-                        <input
-                            class="w3-input w3-border"
-                            type="text"
-                            placeholder="Enter e-mail"
-                        />
-                    </p>
-                    <button
-                        type="button"
-                        class="w3-button w3-padding-large w3-red w3-margin-bottom"
-                        onclick="document.getElementById('newsletter').style.display='none'"
-                    >
-                        Subscribe
-                    </button>
-                </div>
-            </div>
-        </div>
 
         <div class="w3-main" style="margin-left: 250px">
             <!-- Subscribe section -->
