--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -1,5 +1,5 @@
 {% extends "main/base.html" %}
-{% block title %}Главная{% endblock %}
+{% block title %}{{ category.name }}{% endblock %}
 {% block content %}
 {% load static %}
 
@@ -22,8 +22,10 @@
 
     <!-- Image header -->
 
-    <div class="w3-container w3-text-grey" id="">
-        <p>{{ products.count }} картин</p>
+    <div class="w3-container">
+        <div class="w3-panel w3-border-left w3-pale-red w3-border-red">
+            <p>Всего {{ products.count }}</p>
+        </div>
     </div>
 
     <!-- Product grid -->
