--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -23,7 +23,7 @@
     <!-- Image header -->
 
     <div class="w3-container">
-        <div class="w3-panel w3-border-left w3-pale-red w3-border-red">
+        <div class="w3-panel w3-leftbar w3-pale-blue w3-border-blue">
             <p>Всего {{ products.count }}</p>
         </div>
     </div>
