--- a/templates/main/product-details.html
+++ b/templates/main/product-details.html
@@ -23,7 +23,7 @@
     <!-- Product grid -->
 
     <div class="w3-container w3-row">
-        <div class="w3-panel w3-border-left w3-pale-red w3-border-red">
+        <div class="w3-panel w3-leftbar w3-pale-blue w3-border-blue">
             <p>Название: {{ product.name }}</p>
             <p>Описание: {{ product.description }}</p>
             <p>Цена: {{ product.price }} руб.</p>
