--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -15,17 +15,19 @@
     <header class="w3-container w3-xlarge">
         <p class="w3-left">Новинки</p>
         <p class="w3-right">
-            <a href="{% url 'cart:cart_detail' %}" class="w3-bar-item w3-button">
-                <i class="fa fa-shopping-cart w3-margin-right"></i>
-            </a>    
-            <i class="fa fa-sign-in"></i>
+            <a href="{% url 'cart:cart_detail' %}" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-shopping-cart"></i>
+            </a>
+            <a href="#" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-sign-in"></i>
+            </a>
         </p>
     </header>
 
     <!-- Image header -->
 
     <div class="w3-container" id="">
-        <div class="w3-panel w3-border-left w3-pale-red w3-border-red">
+        <div class="w3-panel w3-leftbar w3-pale-blue w3-border-blue">
             <p>Всего {{ products.count }}</p>
         </div>
     </div>
@@ -37,17 +39,18 @@
         <div class="w3-col l3 s6">
             <div class="w3-container">
                 <img src="{{ product.image.url }}" style="width: 100%"/>
-                < class="w3-center">
+                <p class="w3-center">
                 <b>{{ product.name }}</b></br>
                 <b>{{ product.price }} рублей</b>
                 <form action="{% url "cart:cart_add" product.id %}" method="post">
-                <input type="submit" value="Remove">
+                <button class="w3-btn w3-black w3-input">В корзину</button>
                 {% csrf_token %}
-                </form>                
+                </form>
+                </p>       
             </div>
         </div>
         {% endfor %}
-    </div>
+    </div><br>
 
     <!-- End page content -->
 </div>
