--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -15,8 +15,12 @@
     <header class="w3-container w3-xlarge">
         <p class="w3-left">{{ category.name }}</p>
         <p class="w3-right">
-            <i class="fa fa-shopping-cart w3-margin-right"></i>
-            <i class="fa fa-sign-in"></i>
+            <a href="{% url 'cart:cart_detail' %}" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-shopping-cart"></i>
+            </a>
+            <a href="#" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-sign-in"></i>
+            </a>
         </p>
     </header>
 
@@ -38,9 +42,11 @@
                 <p class="w3-center">
                 <b>{{ product.name }}</b></br>
                 <b>{{ product.price }} рублей</b>
-                <a href="{{ product.get_absolute_url }}" class="w3-button w3-block w3-black">Подробнее</a>
-                </p>
-                
+                <form action="{% url "cart:cart_add" product.id %}" method="post">
+                <button class="w3-btn w3-black w3-input">В корзину</button>
+                {% csrf_token %}
+                </form>
+                </p>                
             </div>
         </div>
         {% endfor %}
