--- a/templates/main/list.html
+++ b/templates/main/list.html
@@ -38,7 +38,7 @@
         {% for product in products %}
         <div class="w3-col l3 s6">
             <div class="w3-container">
-                <img src="{{ product.image.url }}" style="width: 100%"/>
+                <img src="{{ product.image.url }}" style="max-height: 140px"/>
                 <p class="w3-center">
                 <b>{{ product.name }}</b></br>
                 <b>{{ product.price }} рублей</b>
