--- a/templates/main/product-details.html
+++ b/templates/main/product-details.html
@@ -15,8 +15,12 @@
     <header class="w3-container w3-xlarge">
         <p class="w3-left">Лот № {{ product.id }}</p>
         <p class="w3-right">
-            <i class="fa fa-shopping-cart w3-margin-right"></i>
-            <i class="fa fa-sign-in"></i>
+            <a href="{% url 'cart:cart_detail' %}" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-shopping-cart"></i>
+            </a>
+            <a href="#" class="w3-margin-right" style="text-decoration: none">
+                <i class="fa fa-sign-in"></i>
+            </a>
         </p>
     </header>
 
@@ -37,6 +41,15 @@
     
     <div class=" w3-container w3-row">
         <img src="{{ product.image.url }}" style="width: 100%" />
+    </div>
+
+    <div class=" w3-container w3-row">
+        <p class="w3-center">
+            <form action="{% url "cart:cart_add" product.id %}" method="post">
+                <button class="w3-btn w3-black w3-input">В корзину</button>
+                {% csrf_token %}
+            </form>
+        </p>
     </div>
     
     <br>
